--- a/messaging_app/requirements.txt
+++ b/messaging_app/requirements.txt
@@ -7,3 +7,4 @@ djangorestframework-simplejwt==5.3.1; python_version >= '3.8'
 drf-nested-routers==0.94.1; python_version >= '3.8'
 pyjwt==2.10.1; python_version >= '3.9'
 sqlparse==0.5.3; python_version >= '3.8'
+mysqlclient==2.2.1 
