--- a/messaging_app/messaging_app/docker-compose.yml
+++ b/messaging_app/messaging_app/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     build: .
     volumes:
       - .:/app
+      - static_volume:/app/static
+      - media_volume:/app/media
     ports:
       - "8000:8000"
     env_file:
@@ -14,6 +16,7 @@ services:
         condition: service_healthy
     command: >
       sh -c "python manage.py migrate &&
+             python manage.py collectstatic --noinput &&
              python manage.py runserver 0.0.0.0:8000"
 
   db:
@@ -31,4 +34,6 @@ services:
       retries: 5
 
 volumes:
-  mysql_data: 
+  mysql_data:
+  static_volume:
+  media_volume: 
