--- a/messaging_app/messaging_app/Jenkinsfile
+++ b/messaging_app/messaging_app/Jenkinsfile
@@ -28,8 +28,8 @@ pipeline {
                     python${PYTHON_VERSION} -m venv ${VENV_NAME}
                     . ${VENV_NAME}/bin/activate
                     python -m pip install --upgrade pip
-                    pip install -r messaging_app/requirements.txt
-                    pip install pytest pytest-django pytest-cov
+                    pip3 install -r messaging_app/requirements.txt
+                    pip3 install pytest pytest-django pytest-cov
                 """
             }
         }
@@ -68,7 +68,7 @@ pipeline {
                 // Run pylint for code quality checks
                 sh """
                     . ${VENV_NAME}/bin/activate
-                    pip install pylint
+                    pip3 install pylint
                     cd messaging_app
                     pylint --output-format=parseable --reports=yes . > pylint-report.txt || true
                 """
