--- a/messaging_app/messaging_app/.github/workflows/ci.yml
+++ b/messaging_app/messaging_app/.github/workflows/ci.yml
@@ -43,7 +43,15 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip3 install -r messaging_app/requirements.txt
-        pip3 install pytest pytest-django pytest-cov
+        pip3 install pytest pytest-django pytest-cov flake8
+
+    - name: Run flake8
+      run: |
+        cd messaging_app
+        # Stop the build if there are Python syntax errors or undefined names
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        # Exit-zero treats all errors as warnings
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
     - name: Run migrations
       env:
@@ -58,7 +66,7 @@ jobs:
         cd messaging_app
         python manage.py migrate
 
-    - name: Run tests
+    - name: Run tests with coverage
       env:
         MYSQL_DATABASE: messaging_db_test
         MYSQL_USER: test_user
@@ -69,10 +77,24 @@ jobs:
         DEBUG: 1
       run: |
         cd messaging_app
-        pytest --cov=. --cov-report=xml
+        pytest --cov=. --cov-report=xml --cov-report=html
 
-    - name: Upload coverage report
+    - name: Upload coverage report to Codecov
       uses: codecov/codecov-action@v3
       with:
         file: ./messaging_app/coverage.xml
-        fail_ci_if_error: true 
+        fail_ci_if_error: true
+
+    - name: Upload coverage report as artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: code-coverage-report
+        path: |
+          messaging_app/coverage.xml
+          messaging_app/htmlcov
+        retention-days: 7
+
+    - name: Check minimum coverage threshold
+      run: |
+        cd messaging_app
+        coverage report --fail-under=80 
